--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@popperjs/core": "^2.9.2",
         "autoprefixer": "^10.2.5",
         "bootstrap": "^5.0.0-beta3",
         "postcss-loader": "^5.3.0"
